
- Make prediction of mass fluxes before momentum solving optionnal. This
  impact variable density algorithm (idilat>=2).

- Make advanced turbulence inititalisation for k-omega, Bl-v2/k and
  EBRSM turbulence models default option.

- Slope test on vector (and tensor) is now invariant by rotation by default

User changes
------------

- Disable cases instead of exiting when a run directory check fails in
  studymanager.

- Separate compilation test and repository update features and add tags
  feature to studymanager:
  * --test-compilation or -t to test compilation for all cases
  * --update or -u to update GUI parameter files and set paths in scripts
    SaturneGui and runcase
  * --update-xml or -x to update GUI parameter files only
  * --with-tags to only process runs with all passed tags
  * --without-tags to exclude runs with one of the passed tags.

- Legacy coupling-based transient turbomachinery option is now defined in a
  manner similar to join-based coupling, simply replacing simply the joining
  by an internal coupling. Coupling is internal to a code instance, requiring
  a single data setup, and switching from a joining to a coupling-based
  scheme is now easy.

- Changes in Lagrangian module boundary and injection definitions.
  * renamed boundary particle classes to sets to avoid confusion with
    statistical classes.
  * some API changes in user functions; the cs_user_lagr_new_p_attr function
    is removed in favor of the more general cs_user_lagr_in.
  * boundary zones are now based on the general zones, as defined using the
    GUI or cs_user_zones.c.
  * definition of boundary injections is now more streamlined. Complex coal
    (non-raw) coal definitions, which were little tested, can be done using
    cs_user_lagr_in.
  * mesh-based profiles (injection rate) may be defined using user functions.
  * volume injections may now be done using the same mechanism.

- Removed handling of VTK-based scalar slice outputs in studymanager;